Fixed sidebar's bug on iphone

--- a/themes/default/src/scss/_sidebar.scss
+++ b/themes/default/src/scss/_sidebar.scss
@@ -42,9 +42,8 @@
 }
 
 .sidebar__wrapper {
-    height: calc(100vh - 30px);
+    height: calc(100% - 70px);
     overflow: auto;
-    padding-bottom: 40px
 }
 
 .nav__vertical {
